add resource requests

--- a/argocd/applications/wikijs/app.yaml
+++ b/argocd/applications/wikijs/app.yaml
@@ -57,6 +57,11 @@ spec:
             - name: "app"
               containerPort: 3000
 
+          resources:
+            requests:
+              cpu: "10m"
+              memory: "75Mi"
+
 ---
 
 apiVersion: v1
