--- a/argocd/applications/actualbudget/deployment.yaml
+++ b/argocd/applications/actualbudget/deployment.yaml
@@ -20,7 +20,9 @@ spec:
     spec:
       containers:
         - name: "actualbudget"
-          image: "docker.io/actualbudget/actual-server:24.8.0"
+          # version 24.8.0
+          image: "docker.io/actualbudget/actual-server:sha256:52a63c1e521b9dec706ca9699e6f625582176b6a21930496dbabe3e4d36e3f03"
+          imagePullPolicy: "IfNotPresent"
 
           env:
             - name: "ACTUAL_UPLOAD_FILE_SYNC_SIZE_LIMIT_MB"
@@ -46,7 +48,9 @@ spec:
               mountPath: "/data"
 
         - name: "rsync"
-          image: "ogivuk/rsync:latest"
+          # version 0.2
+          image: "ogivuk/rsync:sha256:ba8282ca451b397eb6a7ca7ecbf3135876737d27bd6bdbd85f17d7047a6d2578"
+          imagePullPolicy: "IfNotPresent"
 
           env:
             - name: "RSYNC_CRONTAB"
@@ -70,6 +74,9 @@ spec:
 
             - name: "rsync"
               mountPath: "/rsync"
+
+      imagePullSecrets:
+        - name: "dockerhub-tlake-read-only"
 
       volumes:
         - name: "data"
