--- a/argocd/applications/actualbudget/kustomization.yaml
+++ b/argocd/applications/actualbudget/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- deployment.yaml
+- app.yaml
 - persistent-volumes.yaml
-- routing.yaml
+- rsync.yaml
 
 namespace: "actualbudget"
 
