--- a/argocd/applications/actualbudget/rsync.yaml
+++ b/argocd/applications/actualbudget/rsync.yaml
@@ -1,9 +1,11 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: "actualbudget"
   labels:
     app: "actualbudget"
+    service: "actualbudget-rsync"
+  name: "actualbudget-rsync"
+  namespace: "actualbudget"
 
 spec:
   replicas: 1
@@ -12,41 +14,17 @@ spec:
   selector:
     matchLabels:
       app: "actualbudget"
+      service: "actualbudget-rsync"
 
   template:
     metadata:
       labels:
         app: "actualbudget"
+        service: "actualbudget-rsync"
+      name: "actualbudget-rsync"
+      namespace: "actualbudget"
     spec:
       containers:
-        - name: "actualbudget"
-          # version 24.8.0
-          image: "docker.io/actualbudget/actual-server:sha256:52a63c1e521b9dec706ca9699e6f625582176b6a21930496dbabe3e4d36e3f03"
-          imagePullPolicy: "IfNotPresent"
-
-          env:
-            - name: "ACTUAL_UPLOAD_FILE_SYNC_SIZE_LIMIT_MB"
-              value: "200"
-
-            - name: "ACTUAL_UPLOAD_SYNC_ENCRYPTED_FILE_SYNC_SIZE_LIMIT_MB"
-              value: "500"
-
-            - name: "ACTUAL_UPLOAD_FILE_SIZE_LIMIT_MB"
-              value: "20"
-
-          ports:
-            - name: "app"
-              containerPort: 5006
-
-          resources:
-            requests:
-              cpu: "200m"
-              memory: "120Mi"
-
-          volumeMounts:
-            - name: "data"
-              mountPath: "/data"
-
         - name: "rsync"
           # version 0.2
           image: "ogivuk/rsync:sha256:ba8282ca451b397eb6a7ca7ecbf3135876737d27bd6bdbd85f17d7047a6d2578"
