--- a/argocd/applications/actualbudget/rsync.yaml
+++ b/argocd/applications/actualbudget/rsync.yaml
@@ -27,7 +27,7 @@ spec:
       containers:
         - name: "rsync"
           # version 0.2
-          image: "ogivuk/rsync:sha256:ba8282ca451b397eb6a7ca7ecbf3135876737d27bd6bdbd85f17d7047a6d2578"
+          image: "ogivuk/rsync@sha256:ba8282ca451b397eb6a7ca7ecbf3135876737d27bd6bdbd85f17d7047a6d2578"
           imagePullPolicy: "IfNotPresent"
 
           env:
