--- a/argocd/applications/actualbudget/rsync.yaml
+++ b/argocd/applications/actualbudget/rsync.yaml
@@ -1,3 +1,18 @@
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  labels:
+    app: "actualbudget"
+    service: "actualbudget-rsync"
+  name: "actualbudget-rsync-crontab"
+  namespace: "actualbudget"
+
+data:
+  crontab: |
+    50 * * * * rsync -avzh /data/source/* /data/destination/
+
+---
+
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -46,6 +61,10 @@ spec:
             - name: "backup"
               mountPath: "/data/destination"
 
+            - name: "crontab"
+              mountPath: "/rsync/crontab"
+              subPath: "crontab"
+
             - name: "data"
               mountPath: "/data/source"
               readOnly: true
@@ -57,6 +76,10 @@ spec:
         - name: "dockerhub-tlake-read-only"
 
       volumes:
+        - name: "crontab"
+          configMap:
+            name: "actualbudget-rsync-crontab"
+
         - name: "data"
           persistentVolumeClaim:
             claimName: "data"
