--- a/argocd/applications/foundryvtt/kustomization.yaml
+++ b/argocd/applications/foundryvtt/kustomization.yaml
@@ -2,8 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- deployment.yaml
+- app.yaml
 - persistent-volumes.yaml
+- rsync.yaml
 
 namespace: "foundryvtt"
 
