--- a/argocd/applications/foundryvtt-ando/app.yaml
+++ b/argocd/applications/foundryvtt-ando/app.yaml
@@ -1,9 +1,11 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: "foundryvtt-ando"
   labels:
     app: "foundryvtt-ando"
+    service: "foundryvtt-ando-app"
+  name: "foundryvtt-ando-app"
+  namespace: "foundryvtt-ando"
 
 spec:
   replicas: 1
@@ -12,11 +14,15 @@ spec:
   selector:
     matchLabels:
       app: "foundryvtt-ando"
+      service: "foundryvtt-ando-app"
 
   template:
     metadata:
       labels:
         app: "foundryvtt-ando"
+        service: "foundryvtt-ando-app"
+      name: "foundryvtt-ando-app"
+      namespace: "foundryvtt-ando"
 
     spec:
       affinity:
@@ -32,7 +38,7 @@ spec:
       containers:
         - name: "foundryvtt"
           # version 11.315
-          image: "felddy/foundryvtt:sha256:6a79a9fe9110d7447e7b36f534402884a2c88783dc59b7d25943a3c47145ab03"
+          image: "felddy/foundryvtt@sha256:6a79a9fe9110d7447e7b36f534402884a2c88783dc59b7d25943a3c47145ab03"
           imagePullPolicy: "IfNotPresent"
 
           env:
@@ -94,34 +100,6 @@ spec:
             - name: "load"
               mountPath: "/load"
 
-        - name: "rsync"
-          # version 0.2
-          image: "ogivuk/rsync:sha256:ba8282ca451b397eb6a7ca7ecbf3135876737d27bd6bdbd85f17d7047a6d2578"
-          imagePullPolicy: "IfNotPresent"
-
-          env:
-            - name: "RSYNC_CRONTAB"
-              value: "crontab"
-
-            - name: "TZ"
-              value: "America/Los_Angeles"
-
-          resources:
-            requests:
-              cpu: "80m"
-              memory: "70Mi"
-
-          volumeMounts:
-            - name: "backup"
-              mountPath: "/data/destination"
-
-            - name: "data"
-              mountPath: "/data/source"
-              readOnly: true
-
-            - name: "rsync"
-              mountPath: "/rsync"
-
       hostname: "ando-foundry"
 
       imagePullSecrets:
@@ -140,14 +118,6 @@ spec:
           persistentVolumeClaim:
             claimName: "load"
 
-        - name: "backup"
-          persistentVolumeClaim:
-            claimName: "backup"
-
-        - name: "rsync"
-          persistentVolumeClaim:
-            claimName: "rsync"
-
 ---
 
 apiVersion: v1
@@ -155,18 +125,19 @@ kind: Service
 metadata:
   labels:
     app: "foundryvtt-ando"
-    service: "foundryvtt-ando"
-  name: "foundryvtt-ando"
+    service: "foundryvtt-ando-app"
+  name: "foundryvtt-ando-app"
   namespace: "foundryvtt-ando"
 
 spec:
   ports:
     - name: "http-traffic"
       port: 80
-      targetPort: "foundryvtt-ando"
+      targetPort: "foundryvtt-ando-app"
 
   selector:
     app: "foundryvtt-ando"
+    service: "foundryvtt-ando-app"
 
 ---
 
@@ -175,7 +146,7 @@ kind: IngressRoute
 metadata:
   labels:
     app: "foundryvtt-ando"
-    service: "foundryvtt-ando"
+    service: "foundryvtt-ando-app"
   name: "foundryvtt-ando-web"
   namespace: "foundryvtt-ando"
 
@@ -187,7 +158,7 @@ spec:
     - match: Host(`ando-mcfoundry.tlake.io`)
       kind: Rule
       services:
-        - name: "foundryvtt-ando"
+        - name: "foundryvtt-ando-app"
           port: "http-traffic"
 
 ---
@@ -197,7 +168,7 @@ kind: IngressRoute
 metadata:
   labels:
     app: "foundryvtt-ando"
-    service: "foundryvtt-ando"
+    service: "foundryvtt-ando-app"
   name: "foundryvtt-ando-websecure"
   namespace: "foundryvtt-ando"
 
@@ -209,7 +180,7 @@ spec:
     - match: Host(`ando-mcfoundry.tlake.io`)
       kind: Rule
       services:
-        - name: "foundryvtt-ando"
+        - name: "foundryvtt-ando-app"
           port: "http-traffic"
 
   tls:
