--- a/argocd/applications/foundryvtt-ando/kustomization.yaml
+++ b/argocd/applications/foundryvtt-ando/kustomization.yaml
@@ -2,10 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- deployment.yaml
+- app.yaml
 - persistent-volumes.yaml
+- rsync.yaml
 
 namespace: "foundryvtt-ando"
 
 commonLabels:
   app: "foundryvtt-ando"
+
