update nextcloud shas

--- a/argocd/applications/nextcloud/app.yaml
+++ b/argocd/applications/nextcloud/app.yaml
@@ -35,9 +35,11 @@ spec:
                   values:
                     - "thicket3"
       containers:
-        - name: "nextcloud-app"
+        - name: "app"
           # UPDATE IN cron.yaml AS WELL:
-          image: "nextcloud:29.0-fpm-alpine"
+          # tag 29.0.13-fpm-alpine
+          image: "nextcloud@sha256:809ce152986caebc1abf1449a4e1d067bdb54fe2728c6b050471f22d31d3186b"
+          imagePullPolicy: "IfNotPresent"
 
           env:
             - name: "NEXTCLOUD_TRUSTED_DOMAINS"
@@ -101,6 +103,9 @@ spec:
 
             - mountPath: "/var/www/html/data"
               name: "nextcloud-data"
+
+      imagePullSecrets:
+        - name: "dockerhub-tlake-read-only"
 
       volumes:
         - name: "nextcloud-storage"
