--- a/argocd/applications/vaultwarden/db.yaml
+++ b/argocd/applications/vaultwarden/db.yaml
@@ -26,7 +26,9 @@ spec:
     spec:
       containers:
         - name: "postgres"
-          image: "postgres:16"
+          # tag v16.8-alpine3.21
+          image: "postgres@sha256:3b057e1c2c6dfee60a30950096f3fab33be141dbb0fdd7af3d477083de94166c"
+          imagePullPolicy: "IfNotPresent"
 
           env:
             - name: "POSTGRES_DB"
@@ -58,6 +60,9 @@ spec:
           volumeMounts:
             - name: "postgres-data"
               mountPath: "/var/lib/postgresql/data"
+
+      imagePullSecrets:
+        - name: "dockerhub-tlake-read-only"
 
       volumes:
         - name: "app-data"
