--- a/argocd/applications/wikijs/db.yaml
+++ b/argocd/applications/wikijs/db.yaml
@@ -26,7 +26,9 @@ spec:
     spec:
       containers:
         - name: "postgres"
-          image: "postgres:16"
+          # tag v16.8-alpine3.21
+          image: "postgres@sha256:3b057e1c2c6dfee60a30950096f3fab33be141dbb0fdd7af3d477083de94166c"
+          imagePullPolicy: "IfNotPresent"
 
           env:
             - name: "POSTGRES_DB"
@@ -59,6 +61,9 @@ spec:
             - name: "postgres-data"
               mountPath: "/var/lib/postgresql/data"
 
+      imagePullSecrets:
+        - name: "dockerhub-tlake-read-only"
+
       volumes:
         - name: "postgres-data"
           persistentVolumeClaim:
@@ -74,6 +79,7 @@ metadata:
     service: "wikijs-postgres"
   name: "wikijs-postgres"
   namespace: "wikijs"
+
 spec:
   selector:
     app: "wikijs"
