--- a/argocd/applications/actualbudget/rsync.yaml
+++ b/argocd/applications/actualbudget/rsync.yaml
@@ -1,9 +1,26 @@
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  labels:
+    app: "actualbudget"
+    service: "actualbudget-rsync"
+  name: "actualbudget-rsync-crontab"
+  namespace: "actualbudget"
+
+data:
+  crontab: |
+    50 * * * * rsync -avzh /data/source/* /data/destination/
+
+---
+
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: "actualbudget"
   labels:
     app: "actualbudget"
+    service: "actualbudget-rsync"
+  name: "actualbudget-rsync"
+  namespace: "actualbudget"
 
 spec:
   replicas: 1
@@ -12,41 +29,21 @@ spec:
   selector:
     matchLabels:
       app: "actualbudget"
+      service: "actualbudget-rsync"
 
   template:
     metadata:
       labels:
         app: "actualbudget"
+        service: "actualbudget-rsync"
+      name: "actualbudget-rsync"
+      namespace: "actualbudget"
     spec:
       containers:
-        - name: "actualbudget"
-          image: "docker.io/actualbudget/actual-server:24.8.0"
-
-          env:
-            - name: "ACTUAL_UPLOAD_FILE_SYNC_SIZE_LIMIT_MB"
-              value: "200"
-
-            - name: "ACTUAL_UPLOAD_SYNC_ENCRYPTED_FILE_SYNC_SIZE_LIMIT_MB"
-              value: "500"
-
-            - name: "ACTUAL_UPLOAD_FILE_SIZE_LIMIT_MB"
-              value: "20"
-
-          ports:
-            - name: "app"
-              containerPort: 5006
-
-          resources:
-            requests:
-              cpu: "200m"
-              memory: "120Mi"
-
-          volumeMounts:
-            - name: "data"
-              mountPath: "/data"
-
         - name: "rsync"
-          image: "ogivuk/rsync:latest"
+          # version 0.2 arm
+          image: "ogivuk/rsync@sha256:75c0cf3b120c644bf6e59b4bcbb5dbce8fce4ff4b43f4aaac3b55434acd90e5a"
+          imagePullPolicy: "IfNotPresent"
 
           env:
             - name: "RSYNC_CRONTAB"
@@ -64,14 +61,22 @@ spec:
             - name: "backup"
               mountPath: "/data/destination"
 
+            - name: "crontab"
+              mountPath: "/rsync/crontab"
+              subPath: "crontab"
+
             - name: "data"
               mountPath: "/data/source"
               readOnly: true
 
-            - name: "rsync"
-              mountPath: "/rsync"
+      imagePullSecrets:
+        - name: "dockerhub-tlake-read-only"
 
       volumes:
+        - name: "crontab"
+          configMap:
+            name: "actualbudget-rsync-crontab"
+
         - name: "data"
           persistentVolumeClaim:
             claimName: "data"
@@ -79,8 +84,4 @@ spec:
         - name: "backup"
           persistentVolumeClaim:
             claimName: "backup"
-
-        - name: "rsync"
-          persistentVolumeClaim:
-            claimName: "rsync"
 
