--- a/argocd/applications/collabora/app.yaml
+++ b/argocd/applications/collabora/app.yaml
@@ -27,7 +27,9 @@ spec:
     spec:
       containers:
         - name: "collabora-app"
-          image: "collabora/code"
+          # version 24.04.13.2.1
+          image: "collabora/code@sha256:01dc4ab83977edf0f2eb35c07973ac267ebccf4917d3311efa9b9e336709f608"
+          imagePullPolicy: "IfNotPresent"
 
           env:
             - name: "domain"
@@ -57,6 +59,9 @@ spec:
           ports:
             - name: "app"
               containerPort: 9980
+
+      imagePullSecrets:
+        - name: "dockerhub-tlake-read-only"
 
 ---
 
