--- a/argocd/applications/foundryvtt/app.yaml
+++ b/argocd/applications/foundryvtt/app.yaml
@@ -1,9 +1,11 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: "foundryvtt"
   labels:
     app: "foundryvtt"
+    service: "foundryvtt-app"
+  name: "foundryvtt-app"
+  namespace: "foundryvtt"
 
 spec:
   replicas: 1
@@ -12,11 +14,15 @@ spec:
   selector:
     matchLabels:
       app: "foundryvtt"
+      service: "foundryvtt-app"
 
   template:
     metadata:
       labels:
         app: "foundryvtt"
+        service: "foundryvtt-app"
+      name: "foundryvtt-app"
+      namespace: "foundryvtt"
 
     spec:
       affinity:
@@ -30,8 +36,10 @@ spec:
                     - "thicket1"
 
       containers:
-        - name: "foundryvtt"
-          image: "felddy/foundryvtt:11.315"
+        - name: "app"
+          # version 11.315
+          image: "felddy/foundryvtt@sha256:6a79a9fe9110d7447e7b36f534402884a2c88783dc59b7d25943a3c47145ab03"
+          imagePullPolicy: "IfNotPresent"
 
           env:
             - name: "CONTAINER_CACHE"
@@ -77,7 +85,7 @@ spec:
               value: "America/Los_Angeles"
 
           ports:
-            - name: "foundryvtt"
+            - name: "app"
               containerPort: 30000
 
           resources:
@@ -95,33 +103,10 @@ spec:
             - name: "load"
               mountPath: "/load"
 
-        - name: "rsync"
-          image: "ogivuk/rsync:latest"
-
-          env:
-            - name: "RSYNC_CRONTAB"
-              value: "crontab"
-
-            - name: "TZ"
-              value: "America/Los_Angeles"
-
-          resources:
-            requests:
-              cpu: "80m"
-              memory: "70Mi"
-
-          volumeMounts:
-            - name: "backup"
-              mountPath: "/data/destination"
-
-            - name: "data"
-              mountPath: "/data/source"
-              readOnly: true
-
-            - name: "rsync"
-              mountPath: "/rsync"
-
       hostname: "mechamoogle-foundry"
+
+      imagePullSecrets:
+        - name: "dockerhub-tlake-read-only"
 
       volumes:
         - name: "container-cache"
@@ -136,14 +121,6 @@ spec:
           persistentVolumeClaim:
             claimName: "load"
 
-        - name: "backup"
-          persistentVolumeClaim:
-            claimName: "backup"
-
-        - name: "rsync"
-          persistentVolumeClaim:
-            claimName: "rsync"
-
 ---
 
 apiVersion: v1
@@ -151,18 +128,19 @@ kind: Service
 metadata:
   labels:
     app: "foundryvtt"
-    service: "foundryvtt"
-  name: "foundryvtt"
+    service: "foundryvtt-app"
+  name: "foundryvtt-app"
   namespace: "foundryvtt"
 
 spec:
   ports:
     - name: "http-traffic"
       port: 80
-      targetPort: "foundryvtt"
+      targetPort: "app"
 
   selector:
     app: "foundryvtt"
+    service: "foundryvtt-app"
 
 ---
 
@@ -171,7 +149,7 @@ kind: IngressRoute
 metadata:
   labels:
     app: "foundryvtt"
-    service: "foundryvtt"
+    service: "foundryvtt-app"
   name: "foundryvtt-web"
   namespace: "foundryvtt"
 
@@ -183,7 +161,7 @@ spec:
     - match: Host(`foundry.tlake.io`)
       kind: Rule
       services:
-        - name: "foundryvtt"
+        - name: "foundryvtt-app"
           port: "http-traffic"
 
 ---
@@ -205,7 +183,7 @@ spec:
     - match: Host(`foundry.tlake.io`)
       kind: Rule
       services:
-        - name: "foundryvtt"
+        - name: "foundryvtt-app"
           port: "http-traffic"
 
   tls:
