--- a/argocd/applications/miniflux/app.yaml
+++ b/argocd/applications/miniflux/app.yaml
@@ -27,7 +27,9 @@ spec:
     spec:
       containers:
         - name: "miniflux-app"
-          image: "miniflux/miniflux:2.2.1"
+          # version 2.2.1
+          image: "miniflux/miniflux@sha256:5950f5395ba02125c0d04b4287e6ab0467715112b9dcdc435ce89a52f595d473"
+          imagePullPolicy: "IfNotPresent"
 
           env:
             - name: "ADMIN_PASSWORD"
@@ -83,6 +85,9 @@ spec:
             requests:
               cpu: "3m"
               memory: "60Mi"
+
+      imagePullSecrets:
+        - name: "dockerhub-tlake-read-only"
 
 ---
 
