--- a/argocd/applications/wikijs/db.yaml
+++ b/argocd/applications/wikijs/db.yaml
@@ -2,10 +2,10 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   labels:
-    app: "nextcloud"
-    service: "nextcloud-postgres"
-  name: "nextcloud-postgres"
-  namespace: "nextcloud"
+    app: "wikijs"
+    service: "wikijs-postgres"
+  name: "wikijs-postgres"
+  namespace: "wikijs"
 
 spec:
   replicas: 1
@@ -13,16 +13,15 @@ spec:
 
   selector:
     matchLabels:
-      app: "nextcloud"
-      service: "nextcloud-postgres"
+      app: "wikijs"
 
   template:
     metadata:
       labels:
-        app: "nextcloud"
-        service: "nextcloud-postgres"
-      name: "nextcloud-postgres"
-      namespace: "nextcloud"
+        app: "wikijs"
+        service: "wikijs-postgres"
+      name: "wikijs-postgres"
+      namespace: "wikijs"
 
     spec:
       containers:
@@ -49,18 +48,14 @@ spec:
                 secretKeyRef:
                   name: "config"
                   key: "postgres_user"
-
-            - name: "TZ"
-              value: "America/Los_Angeles"
-
           ports:
             - name: "db"
               containerPort: 5432
 
           resources:
             requests:
-              cpu: "100m"
-              memory: "200Mi"
+              cpu: "20m"
+              memory: "80Mi"
 
           volumeMounts:
             - name: "postgres-data"
@@ -80,21 +75,18 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: "nextcloud"
-    service: "nextcloud-postgres"
-  name: "nextcloud-postgres"
-  namespace: "nextcloud"
+    app: "wikijs"
+    service: "wikijs-postgres"
+  name: "wikijs-postgres"
+  namespace: "wikijs"
 
 spec:
+  selector:
+    app: "wikijs"
+    service: "wikijs-postgres"
   ports:
     - name: "db"
       port: 5432
       protocol: TCP
       targetPort: "db"
-
-  selector:
-    app: "nextcloud"
-    service: "nextcloud-postgres"
-
-  type: NodePort
 
