--- a/argocd/applications/nextcloud/db.yaml
+++ b/argocd/applications/nextcloud/db.yaml
@@ -27,8 +27,8 @@ spec:
     spec:
       containers:
         - name: "postgres"
-          # tag v16.8-alpine3.21
-          image: "postgres@sha256:3b057e1c2c6dfee60a30950096f3fab33be141dbb0fdd7af3d477083de94166c"
+          # tag v16.8-bullseye
+          image: "postgres@sha256:9766852189231700b0f829b80cec1f254e2e7298f211f0446791d258836c82f2"
           imagePullPolicy: "IfNotPresent"
 
           env:
