--- a/ansible/homelab/roles/microk8s_nodes/tasks/microk8s-prepare.yml
+++ b/ansible/homelab/roles/microk8s_nodes/tasks/microk8s-prepare.yml
@@ -59,3 +59,24 @@
     path: /mnt/nas-data
     src: mansionsyrup:/nas/data/thicket-k8s-data
     state: mounted
+
+- name: install open-iscsi
+  become: true
+  ansible.builtin.apt:
+    name:
+      - open-iscsi
+    state: present
+
+- name: install cryptsetup
+  become: true
+  ansible.builtin.apt:
+    name:
+      - cryptsetup
+    state: present
+
+- name: install dmsetup
+  become: true
+  ansible.builtin.apt:
+    name:
+      - dmsetup
+    state: present
