--- a/argocd/applications/foundryvtt/app.yaml
+++ b/argocd/applications/foundryvtt/app.yaml
@@ -37,8 +37,10 @@ spec:
 
       containers:
         - name: "app"
+          # version 13.344
+          image: "felddy/foundryvtt@sha256:059b61b5ef787d09739ba3e7a8656275891633287ac81a61ff22481a26ec04fb"
           # version 12.343
-          image: "felddy/foundryvtt@sha256:6c5e3e9ffbb043626116c48dc4e2f2a07bdc45c406edeb8ac5e7c9abacc0e07b"
+          #image: "felddy/foundryvtt@sha256:6c5e3e9ffbb043626116c48dc4e2f2a07bdc45c406edeb8ac5e7c9abacc0e07b"
           # version 12.324
           #image: "felddy/foundryvtt@sha256:469098ad090c1a8457d52ee388caaf70c3418cf91a39e6cb75670b16706192fb"
           # version 11.315
