replace TIMEZONE env var with TZ

--- a/argocd/applications/foundryvtt/app.yaml
+++ b/argocd/applications/foundryvtt/app.yaml
@@ -87,7 +87,7 @@ spec:
             - name: "FOUNDRY_WORLD"
               value: "import_campaign"
             
-            - name: "TIMEZONE"
+            - name: "TZ"
               value: "America/Los_Angeles"
 
           ports:
