--- a/argocd/applications/it-tools/app.yaml
+++ b/argocd/applications/it-tools/app.yaml
@@ -1,9 +1,7 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: "it-tools"
-  labels:
-    app: "it-tools"
+  name: "-deployment"
 
 spec:
   replicas: 1
@@ -27,7 +25,7 @@ spec:
 
           ports:
             - name: "app"
-              containerPort: 8080
+              containerPort: 80
 
       imagePullSecrets:
         - name: "dockerhub-tlake-read-only"
@@ -37,7 +35,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: "it-tools"
+  name: "-service"
 
 spec:
   ports:
@@ -53,9 +51,7 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  annotations:
-  name: "it-tools-web"
-  namespace: "it-tools"
+  name: "-web"
 
 spec:
   entryPoints:
@@ -73,9 +69,7 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  annotations:
-  name: "it-tools-websecure"
-  namespace: "it-tools"
+  name: "-websecure"
 
 spec:
   entryPoints:
