--- a/argocd/applications/it-tools/app.yaml
+++ b/argocd/applications/it-tools/app.yaml
@@ -1,7 +1,7 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: "-deployment"
+  name: "-deploy"
 
 spec:
   replicas: 1
@@ -35,7 +35,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: "-service"
+  name: "-svc"
 
 spec:
   ports:
@@ -51,7 +51,7 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: "-web"
+  name: "-http"
 
 spec:
   entryPoints:
@@ -61,7 +61,7 @@ spec:
     - match: Host(`it-tools.tlake.io`)
       kind: Rule
       services:
-        - name: "it-tools"
+        - name: "it-tools-svc"
           port: "http-traffic"
 
 ---
@@ -69,7 +69,7 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: "-websecure"
+  name: "-https"
 
 spec:
   entryPoints:
@@ -79,7 +79,7 @@ spec:
     - match: Host(`it-tools.tlake.io`)
       kind: Rule
       services:
-        - name: "it-tools"
+        - name: "it-tools-svc"
           port: "http-traffic"
 
   tls:
