--- a/argocd/applications/it-tools/app.yaml
+++ b/argocd/applications/it-tools/app.yaml
@@ -16,7 +16,7 @@ spec:
 
           ports:
             - name: "app"
-              containerPort: $(CONTAINER_PORT)
+              containerPort: "<<REPLACE>>"
 
       imagePullSecrets:
         - name: "dockerhub-tlake-read-only"
